Make the header div position relative so the search form can be positioned inside it (via absolute positioning). - fixes a layout bug with fixed width pages
svn commit r18586

--- a/www/styles/pinhole-layout-header.css
+++ b/www/styles/pinhole-layout-header.css
@@ -1,5 +1,6 @@
 #hd {
 	background-color: #4b4e4b;
+	position: relative;
 }
 
 #hd h1 {
